cluster/apps/media/jackett/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-ingress
  namespace: media
  annotations:
    hajimari.io/icon: game-icons:chest-armor
    hajimari.io/enable: true
    hajimari.io/appName: "Jackett"
    hajimari.io/group: "Media"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: "jackett.${SECRET_LOCAL_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jackett-svc
            port:
              number: 80
  tls:
  - hosts: 
    - jackett.${SECRET_LOCAL_DOMAIN}
    secretName: jackett-ingress-certs
